# srv-video

./: Cargo.toml  LICENSE  README.md
srv-core/: Cargo.toml  README.md
srv-core/src/feed/: metadata.rs  mod.rs  post.rs  source.rs
srv-daemon/: Cargo.toml  README.md
srv-daemon/src/: config.rs  main.rs  stream.rs
srv-gui/: Cargo.toml  README.md  build.rs
srv-gui/fonts/: icons.toml
srv-gui/src/: icon.rs  main.rs  top_bar.rs
srv-gui/src/feed/: list.rs  mod.rs
srv-gui/src/main_pane/: feed_pane.rs  mod.rs  start.rs
srv-gui/src/main_pane/video_pane/: mod.rs  video_player.rs
srv-host/: Cargo.toml  README.md
srv-host-core/: Cargo.toml  README.md
srv-host-core/src/: config.rs  lib.rs  rss.rs
srv-host-core/src/database/: mod.rs  videos.rs
srv-host/src/: config.rs  main.rs
srv-watch/: Cargo.toml  README.md
srv-watch-core/: Cargo.toml  README.md
srv-watch-core/src/: error.rs  feed.rs  lib.rs
srv-watch-core/src/database/: follow.rs  mod.rs
srv-watch/src/: follow.rs  following.rs  main.rs
