[package]
name = "srv-gui"
version = "0.1.0"
edition = "2024"

[build-dependencies]
iced_lucide = "0.1.0"

[dependencies]
srv-core = { path = "../srv-core" }
srv-host-core = { path = "../srv-host-core" }
srv-watch-core = { path = "../srv-watch-core" }

iced = { version = "0.14.0", features = ["tokio"] }
iced_video_player = "0.6.0"
url = "2.5.8"
tokio = { version = "1.52.3", features = ["full"] }
