[package]
name = "srv-host"
version = "0.1.0"
edition = "2024"

[dependencies]
srv-core = { path = "../srv-core"}
srv-host-core = { path = "../srv-host-core"}
clap = { version = "4.6.1", features = ["derive"] }
rss = "2.0.13"
tokio = { version = "1.52.3", features = ["full"] }
mime = "0.3.17"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
